[package]
name = "clatox-netlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.3.3", default-features = false }
libc = "0.2.147"
netlink-packet-core = "0.7.0"
netlink-packet-utils = "0.5.2"
socket2 = "0.5.3"
